syntax = "proto3";
// Designed to mimic the behavior shown in the GORM example at
// http://doc.gorm.io/models.html

package techschool.pcbook;


import "options/gorm.proto";
import "user.proto";

option go_package = ".;pb";

message CreateUserRequest {
   User user = 1;
}

message CreateUserResponse {
	string id = 1;
}

message FindUserRequest {
	string id = 1;
}

message FindUserResponse {
	User user = 1;
}


service UserService {
    // This option tells protoc-gen-gorm to generate the calls and stubs
  option (gorm.server).autogen = true;

   rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {} ;

   rpc FindUser(FindUserRequest) returns (FindUserResponse) {}
}